--- a/package.json
+++ b/package.json
@@ -2,16 +2,14 @@
   "name": "homemadeburger",
   "version": "1.0.0",
   "description": "Node Express Handlebars # managable-burger-list-with-mysql-and-handlebars",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/n-flam/HomemadeBurger.git"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
@@ -21,10 +19,6 @@
   "dependencies": {
     "express": "^4.17.1",
     "express-handlebars": "^5.2.1",
-    "mysql": "^2.18.1",
-    "node": "^15.10.0"
-  },
-  "devDependencies": {
-    "handlebars-helper-css": "^0.1.0"
+    "mysql": "^2.18.1"
   }
 }
