--- a/package.json
+++ b/package.json
@@ -1,24 +1,31 @@
 {
-  "name": "homemadeburger",
+  "name": "burger-list-with-mysql-and-handlebars",
   "version": "1.0.0",
-  "description": "Node Express Handlebars # managable-burger-list-with-mysql-and-handlebars",
-  "main": "index.js",
+  "description": "# Objective A burger logger with MySQL, Node, Express, and Handlebars. Node and MySQL to query and route data, and Handlebars to generate HTML. Eat-Da-Burger! is a restaurant app that lets users input the names of burgers they'd like to eat. Whenever a user submits a burger's name, the app displays the burger on the left side of the page -- waiting to be devoured. The app will store every burger in a database, whether devoured or not.",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/n-flam/HomemadeBurger.git"
+    "url": "git+https://github.com/marcojansen-gmx/burger-list-with-mysql-and-handlebars.git"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/n-flam/HomemadeBurger/issues"
+    "url": "https://github.com/marcojansen-gmx/burger-list-with-mysql-and-handlebars/issues"
   },
-  "homepage": "https://github.com/n-flam/HomemadeBurger#readme",
+  "homepage": "https://github.com/marcojansen-gmx/burger-list-with-mysql-and-handlebars#readme",
   "dependencies": {
     "express": "^4.17.1",
     "express-handlebars": "^5.2.1",
+    "inquire": "^0.4.8",
+    "msql": "^1.0.3",
     "mysql": "^2.18.1"
+  },
+  "devDependencies": {
+    "handlebars-helper-css": "^0.1.0"
   }
 }
